5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1105.log
== TEST (2019-04-25 11:21:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()
print("Entrada",x)
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado")
	y= "Bolton"
elif (x=="turta")
	y= "Tully"
else:
	y= "Brasao invalido"
print("Casa:",y)

-- ERROR:
File "XXXX", line 19
    elif (x=="esfolado")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:21:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()
print("Entrada",x)
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
else:
	y= "Brasao invalido"
print("Casa:",y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:22:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()
print("Entrada",x)
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
else:
	y= "Brasao invalido"
print("Casa:",y)

-- EXECUTION TIME:
0.153459
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()
print("Entrada",x)
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
else:
	y= "Brasao invalido"
print("Casa:",y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:23:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()
print("Entrada",x)
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
else:
	print("Brasao invalido")
print("Casa:",y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)
if (x!="lobo" and "leao" and "veado" and "dragao" and "rosa" and "sol" and "lula" and "esfolado" and "turta")
if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)

-- ERROR:
File "XXXX", line 6
    if (x!="lobo" and "leao" and "veado" and "dragao" and "rosa" and "sol" and "lula" and "esfolado" and "turta")
                                                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")
elif(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")
elif(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)

-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")
else:
	elif(x=="lobo"):
	y= "Stark"
	elif (x=="leao"):
	y= "Lannister"
	elif (x=="veado"):
	y= "Baratheon"
	elif (x=="dragao"):
	y= "Targaryen"
	elif (x=="rosa"):
	y= "Tyrell"
	elif (x=="sol"):
	y= "Martell"
	elif (x=="lula"):
	y= "Greyjoy"
	elif (x=="esfolado"):
	y= "Bolton"
	elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)

-- ERROR:
File "XXXX", line 9
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

elif(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 7
    elif(x=="lobo"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 26
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)
	else:
		print("Brasao invalido")

-- ERROR:
File "XXXX", line 26
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 26
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:31:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.109934
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:31:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.16645
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	print("Casa:",y)
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
		print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 25
    print("Casa:",y)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 27
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:33:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
	print("Casa:",y)

else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.186334
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
	print("Casa:",y)

else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
	print("Casa:",y)

else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
	print("Casa:",y)

else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
	elif (x=="leao"):
	y= "Lannister"
	elif (x=="veado"):
	y= "Baratheon"
	elif (x=="dragao"):
	y= "Targaryen"
	elif (x=="rosa"):
	y= "Tyrell"
	elif (x=="sol"):
	y= "Martell"
	elif (x=="lula"):
	y= "Greyjoy"
	elif (x=="esfolado"):
	y= "Bolton"
	elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 9
    elif (x=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
	elif (x=="leao"):
		y= "Lannister"
	elif (x=="veado"):
		y= "Baratheon"
	elif (x=="dragao"):
		y= "Targaryen"
	elif (x=="rosa"):
		y= "Tyrell"
	elif (x=="sol"):
		y= "Martell"
	elif (x=="lula"):
		y= "Greyjoy"
	elif (x=="esfolado"):
		y= "Bolton"
	elif (x=="turta"):
		y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 9
    elif (x=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
		y= "Targaryen"
elif (x=="rosa"):
		y= "Tyrell"
elif (x=="sol"):
		y= "Martell"
elif (x=="lula"):
		y= "Greyjoy"
elif (x=="esfolado"):
		y= "Bolton"
elif (x=="turta"):
		y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)

else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 28
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:44:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 27
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:47:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and "leao" and "veado" and "dragao" and "rosa" and "sol" and "lula" and "esfolado" and "turta"):
	print("Brasao invalido")	

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)


-- OUTPUT:
Entrada: lula
Brasao invalido
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and "leao" and "veado" and "dragao" and "rosa" and "sol" and "lula" and "esfolado" and "turta"):
	print("Brasao invalido")	

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)


-- OUTPUT:
Entrada: lula
Brasao invalido
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")	

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")	

elif(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")	

if(x=="lobo"):
	y= "Stark"
elif (x=="leao"):
	y= "Lannister"
elif (x=="veado"):
	y= "Baratheon"
elif (x=="dragao"):
	y= "Targaryen"
elif (x=="rosa"):
	y= "Tyrell"
elif (x=="sol"):
	y= "Martell"
elif (x=="lula"):
	y= "Greyjoy"
elif (x=="esfolado"):
	y= "Bolton"
elif (x=="turta"):
	y= "Tully"
	
print("Casa:",y)


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)
if (x!="lobo" and x!="leao" and x!="veado" and x!="dragao" and x!="rosa" and x!="sol" and x!="lula" and x!="esfolado" and x!="turta"):
	print("Brasao invalido")	

if(x=="lobo"):
	y= "Casa: Stark"
elif (x=="leao"):
	y= "Casa: Lannister"
elif (x=="veado"):
	y= "Casa: Baratheon"
elif (x=="dragao"):
	y= "Casa: Targaryen"
elif (x=="rosa"):
	y= "Casa: Tyrell"
elif (x=="sol"):
	y= "Casa: Martell"
elif (x=="lula"):
	y= "Casa: Greyjoy"
elif (x=="esfolado"):
	y= "Casa: Bolton"
elif (x=="turta"):
	y= "Casa: Tully"
	
print(y)


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Casa: Stark"
elif (x=="leao"):
	y= "Casa: Lannister"
elif (x=="veado"):
	y= "Casa: Baratheon"
elif (x=="dragao"):
	y= "Casa: Targaryen"
elif (x=="rosa"):
	y= "Casa: Tyrell"
elif (x=="sol"):
	y= "Casa: Martell"
elif (x=="lula"):
	y= "Casa: Greyjoy"
elif (x=="esfolado"):
	y= "Casa: Bolton"
elif (x=="turta"):
	y= "Casa: Tully"
else:
	y= "Brasao invalido"
	
print(y)


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:53:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x= input("Qual o brasao? ").lower()

print("Entrada:",x)

if(x=="lobo"):
	y= "Casa: Stark"
elif (x=="leao"):
	y= "Casa: Lannister"
elif (x=="veado"):
	y= "Casa: Baratheon"
elif (x=="dragao"):
	y= "Casa: Targaryen"
elif (x=="rosa"):
	y= "Casa: Tyrell"
elif (x=="sol"):
	y= "Casa: Martell"
elif (x=="lula"):
	y= "Casa: Greyjoy"
elif (x=="esfolado"):
	y= "Casa: Bolton"
elif (x=="turta"):
	y= "Casa: Tully"
else:
	y= "Brasao invalido"
	
print(y)


-- EXECUTION TIME:
0.136642
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
